Implement stateless logout, real-time messaging for admin, detailed API documentation